# superskills

./: .gitignore  README.md  README.zh-CN.md  pyproject.toml
docs/plans/: 2026-04-20-skill-version-management-design.md
docs/superpowers/plans/: 2026-04-20-conflict-bulk-resolution-implementation.md  2026-04-20-skill-version-management-v1.md  2026-04-20-skills-inventory-mvp.md
docs/superpowers/specs/: 2026-04-20-conflict-bulk-resolution-design.md  2026-04-20-dashboard-design.md  2026-04-20-skills-inventory-design.md
src/skills_inventory/: cache.py  cli.py  config.py  git_ops.py  models.py  output.py  scanner.py  targets.py  versions.py
src/skills_inventory/web/: __init__.py  api.py  server.py
src/skills_inventory/web/assets/: __init__.py  app.js  index.html  style.css
tests/: test_cache.py  test_cli_scan.py  test_cli_versions.py  test_dashboard_app_js.py  test_git_ops.py  test_scanner_conflicts.py  test_scanner_detection.py  test_scanner_filters_and_symlinks.py  test_scanner_versions.py  test_targets.py  test_versions.py  test_web_api.py
