[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skills-inventory"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
skills-inventory = "skills_inventory.cli:run"

[tool.pytest.ini_options]
pythonpath = ["src"]
